--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ wptools = "^0.4.17"
 pymediawiki = "^0.7.5"
 anthropic = "^0.60.0"
 pandas = "^2.3.1"
-google = "^3.0.0"
 platformdirs = "^4.3.8"
 keyring = "^25.6.0"
+google-genai = "^1.29.0"
 
 
 [build-system]
